# NormaGraph

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  __main__.py  requirements.txt
backend/api/: __init__.py  main.py
backend/ingestion/: __init__.py  clear_bq_data.py  create_status_view.py  embed_and_upload_flagship.py  ingest_batch_2025.py  normalize_metadata.py  pipeline.py  populate_resolution.py  process_batch_2025.py  verify_bq_ingestion.py
backend/query/: __init__.py  config.py  orchestrator.py
backend/scripts/: run_evaluation.py
data/: DATA.md  document_inventory.md
docs/: runtime_profiles.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedLoadingText.tsx  BrandMark.tsx  ChatInput.tsx  ChatMessage.tsx  DraftArea.tsx  DraftPanel.tsx  FloatingActionButton.tsx  InteractiveArchitecture.tsx  MarkdownRenderer.tsx  PremiumSidebar.tsx  ProtectedRoute.tsx  SettingsDialog.tsx  Sidebar.tsx  app-sidebar.tsx  chart-area-interactive.tsx  nav-user.tsx  section-cards.tsx  sidebar-trigger-wrapper.tsx  site-header.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useChatStore.ts  useFirestoreChat.ts  useLocalChatStore.ts  usePdfViewer.ts  useSpeechRecognition.ts
frontend/lib/: api.ts  apiStreaming.ts  devLog.ts  feedbackService.ts  firebase.ts  modelService.ts  models.ts  pdfViewerApi.ts  (+1 more)
normagraph_core/: __init__.py  requirements.txt
(+99 files in other folders)
