[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normagraph"
version = "0.1.0"
description = "Decision Graph for Policy Intelligence — domain-aware retrieval and orchestration over policy documents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-storage>=2.10.0",
    "google-generativeai>=0.3.0",
    "vertexai>=1.38.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
normagraph-api = "backend.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "normagraph_core*"]
